fixed overlapping bug

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -37,7 +37,8 @@
   }
 }
 
-.page-container {
+.content-container {
   display: flex;
   flex-direction: column;
+  padding-bottom: 6rem;
 }
